--- a/index.html
+++ b/index.html
@@ -37,31 +37,31 @@
 
         <ul class="deck" id="card-deck">
             <li class="card" type="diamond">
-                <div class="icon-triglyceride-btrans"></div>
+                <span class="icon icon-triglyceride-btrans"></span>
             </li>
             <li class="card" type="plane">
-		    <div class="icon-lactose-gtrans"></div>
+		<span class="icon icon-lactose-gtrans"></span>
             </li>
             <li class="card match" type="anchor">
-                <div class="icon-lactose-btrans"></div>
+                <span class="icon icon-lactose-btrans"></span>
             </li>
             <li class="card" type="bolt" >
-                <div class="icon-lysine-btrans"></div>
+                <span class="icon icon-lysine-btrans"></span>
             </li>
             <li class="card" type="cube">
-                <div class="icon-triglyceride-gtrans"></div>
+                <span class="icon icon-triglyceride-gtrans"></span>
             </li>
             <li class="card match" type="anchor">
-                <div class="icon-lactose-btrans"></div>
+                <span class="icon icon-lactose-btrans"></span>
             </li>
             <li class="card" type="leaf">
                 <i class="fa fa-leaf"></i>
             </li>
             <li class="card" type="bicycle">
-                <div class="icon-lysine-gtrans"></div>
+                <span class="icon icon-lysine-gtrans"></span>
             </li>
             <li class="card" type="diamond">
-                    <div class="icon-triglyceride-btrans"></div>
+                    <span class="icon icon-triglyceride-btrans"></span>
             </li>
             <li class="card" type="bomb">
                 <i class="fa fa-bomb"></i>
@@ -73,18 +73,18 @@
                 <i class="fa fa-bomb"></i>
             </li>
             <li class="card open show" type="bolt">
-                <div class="icon-lysine-btrans"></div>
+                <span class="icon icon-lysine-btrans"></span>
             </li>
             <li class="card" type="bicycle">
-                <div class="icon-lysine-gtrans"></div>
+                <span class="icon icon-lysine-gtrans"></span>
             </li>
             <li class="card" type="plane">
 
-                <div class="icon-lactose-gtrans"></div>
+                <span class="icon icon-lactose-gtrans"></span>
 
             </li>
             <li class="card" type="cube">
-                <div class="icon-triglyceride-gtrans"></div>
+                <span class="icon icon-triglyceride-gtrans"></span>
             </li>
         </ul>
 
